--- a/client/index.html
+++ b/client/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='fleetkeep'>
   <head>
     <meta charset="utf-8">
     <title>FleetKeep</title>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/master.css" media="screen" title="no title" charset="utf-8">
+
     <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js'></script>
 
     <script src='app/app.module.js' type='text/javascript'></script>
+    <script src='app/js/login-feature/login.controller.js'></script>
+    <script src='app/js/login-feature/login.factory.js'></script>
+    <script src='app/js/auth-feature/auth.factory.js'></script>
+    <script src='app/js/home-feature/home.controller.js'></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <base href='/'>
   </head>
-  <body ng-app='fleetkeep'>
+  <body>
     <nav>
       <div class='nav-wrapper'>
-        <a href='#' class='brand-logo'>FleetKeep</a>
+        <a href='/' class='brand-logo'>FleetKeep</a>
         <ul id='nav-mobile' class='right hide-on-med-and-down'>
           <li>
             <a href='#'>About</a>
