User login, signup and logout functioning

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,10 @@
     <script src='app/js/login-feature/login.factory.js'></script>
     <script src='app/js/auth-feature/auth.factory.js'></script>
     <script src='app/js/home-feature/home.controller.js'></script>
+    <script src='app/js/dash-feature/dash.controller.js'></script>
+    <script src='app/js/dash-feature/dash.factory.js'></script>
+    <script src='app/js/report-feature/report.factory.js'></script>
+    <script src='app/js/report-feature/report.controller.js'></script>
 
     <base href='/'>
   </head>
@@ -24,12 +28,15 @@
     <nav>
       <div class='nav-wrapper'>
         <a href='/' class='brand-logo'>FleetKeep</a>
-        <ul id='nav-mobile' class='right hide-on-med-and-down'>
+        <ul class='right hide-on-med-and-down'>
           <li>
             <a href='#'>About</a>
           </li>
           <li>
             <a href='/login'>Login</a>
+          </li>
+          <li>
+            <a href='/signup'>Sign Up</a>
           </li>
         </ul>
       </div>
