--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js"></script>
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js'></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script>
-    <script src="https://code.highcharts.com"></script>
+    <!-- <script src="https://code.highcharts.com"></script> -->
 
     <script src='app/app.module.js' type='text/javascript'></script>
     <script src='app/js/login-feature/login.controller.js'></script>
@@ -25,6 +25,8 @@
     <script src='app/js/dash-feature/dash.factory.js'></script>
     <script src='app/js/report-feature/report.factory.js'></script>
     <script src='app/js/report-feature/report.controller.js'></script>
+    <script src='app/js/review-feature/review.controller.js'></script>
+    <script src='app/js/review-feature/review.factory.js'></script>
 
     <base href='/'>
   </head>
