--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.js'></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script>
     <script src="http://code.highcharts.com/highcharts.src.js"></script>
-    <script src="bower_components/highcharts-ng/dist/highcharts-ng.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts-ng/0.0.11/highcharts-ng.min.js"></script>
 
     <script src='app/app.module.js' type='text/javascript'></script>
     <script src='app/js/login-feature/login.controller.js'></script>
