--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-materialize/0.1.9/angular-materialize.min.js"></script>
     <script src="http://code.highcharts.com/highcharts.src.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts-ng/0.0.11/highcharts-ng.min.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/signature_pad/1.5.3/signature_pad.min.js'></script>
 
     <script src='app/app.module.js' type='text/javascript'></script>
     <script src='app/js/login-feature/login.controller.js'></script>
@@ -28,6 +29,7 @@
     <script src='app/js/report-feature/report.controller.js'></script>
     <script src='app/js/review-feature/review.controller.js'></script>
     <script src='app/js/review-feature/review.factory.js'></script>
+    <script src='app/js/review-feature/review.directive.js'></script>
 
     <base href='/'>
   </head>
