Confirmation page with signature field

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,6 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
 
-
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="stylesheets/master.css" media="screen" title="no title" charset="utf-8">
 
@@ -29,6 +28,10 @@
     <script src='app/js/report-feature/report.controller.js'></script>
     <script src='app/js/review-feature/review.controller.js'></script>
     <script src='app/js/review-feature/review.factory.js'></script>
+    <script src='app/js/confirm-feature/confirm.controller.js'></script>
+    <script src='app/js/confirm-feature/confirm.factory.js'></script>
+
+    <base href="/">
   </head>
   <body>
     <div ui-view>
