Use html2canvas to render confirm page

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts-ng/0.0.11/highcharts-ng.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/signature_pad/1.5.3/signature_pad.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.2.61/jspdf.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js'></script>
 
     <script src='app/app.module.js' type='text/javascript'></script>
     <script src='app/js/login-feature/login.controller.js'></script>
